punto5/squealParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class squealParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, STRING=15, INSERT=16, 
		INTO=17, VALUES=18, READ=19, UPDATE=20, SET=21, DISTINCT=22, COMA=23, 
		BOOL=24, OR=25, AND=26, AS=27, QUOTE=28, FROM=29, WHERE=30, DELETE=31, 
		DROP=32, ALL=33, IS=34, NOT=35, NULL=36, BETWEEN=37, LIKE=38, IN=39, PRIMARY_KEY=40, 
		LEFT_PAR=41, RIGHT_PAR=42, SEMICOLON=43, TABLE=44, CREATE=45, NAME=46, 
		DIGIT=47, DOUBLE=48, INT=49, ALPHA=50, WS=51, OTHER=52;
	public static final int
		RULE_parse_prog = 0, RULE_statement = 1, RULE_create_statement = 2, RULE_insert_statement = 3, 
		RULE_read_statement = 4, RULE_update_statement = 5, RULE_delete_statement = 6, 
		RULE_drop_statement = 7, RULE_read_expression = 8, RULE_columndef = 9, 
		RULE_data_type = 10, RULE_column_name = 11, RULE_table_name = 12, RULE_expression = 13, 
		RULE_and_condition = 14, RULE_condition = 15, RULE_operand = 16, RULE_summand = 17, 
		RULE_factor = 18, RULE_term = 19, RULE_compare = 20, RULE_alias = 21;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse_prog", "statement", "create_statement", "insert_statement", "read_statement", 
			"update_statement", "delete_statement", "drop_statement", "read_expression", 
			"columndef", "data_type", "column_name", "table_name", "expression", 
			"and_condition", "condition", "operand", "summand", "factor", "term", 
			"compare", "alias"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'='", "'*'", "'int'", "'double'", "'varchar'", "'date'", "'+'", 
			"'-'", "'/'", "'<='", "'>='", "'<'", "'>'", "'!='", null, "'INSERT'", 
			"'INTO'", "'VALUES'", "'READ'", "'UPDATE'", "'SET'", "'DISTINCT'", "','", 
			null, "'OR'", "'AND'", "'AS'", "'''", "'FROM'", "'WHERE'", "'DELETE'", 
			"'DROP'", "'ALL'", "'IS'", "'NOT'", "'NULL'", "'BETWEEN'", "'LIKE'", 
			"'IN'", "'PRIMARY KEY'", "'('", "')'", "';'", "'TABLE'", "'CREATE'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "STRING", "INSERT", "INTO", "VALUES", "READ", "UPDATE", 
			"SET", "DISTINCT", "COMA", "BOOL", "OR", "AND", "AS", "QUOTE", "FROM", 
			"WHERE", "DELETE", "DROP", "ALL", "IS", "NOT", "NULL", "BETWEEN", "LIKE", 
			"IN", "PRIMARY_KEY", "LEFT_PAR", "RIGHT_PAR", "SEMICOLON", "TABLE", "CREATE", 
			"NAME", "DIGIT", "DOUBLE", "INT", "ALPHA", "WS", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public squealParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Parse_progContext extends ParserRuleContext {
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode EOF() { return getToken(squealParser.EOF, 0); }
		public Parse_progContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse_prog; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitParse_prog(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Parse_progContext parse_prog() throws RecognitionException {
		Parse_progContext _localctx = new Parse_progContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			statement();
			setState(45);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public List<TerminalNode> SEMICOLON() { return getTokens(squealParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(squealParser.SEMICOLON, i);
		}
		public List<Create_statementContext> create_statement() {
			return getRuleContexts(Create_statementContext.class);
		}
		public Create_statementContext create_statement(int i) {
			return getRuleContext(Create_statementContext.class,i);
		}
		public List<Read_statementContext> read_statement() {
			return getRuleContexts(Read_statementContext.class);
		}
		public Read_statementContext read_statement(int i) {
			return getRuleContext(Read_statementContext.class,i);
		}
		public List<Update_statementContext> update_statement() {
			return getRuleContexts(Update_statementContext.class);
		}
		public Update_statementContext update_statement(int i) {
			return getRuleContext(Update_statementContext.class,i);
		}
		public List<Delete_statementContext> delete_statement() {
			return getRuleContexts(Delete_statementContext.class);
		}
		public Delete_statementContext delete_statement(int i) {
			return getRuleContext(Delete_statementContext.class,i);
		}
		public List<Drop_statementContext> drop_statement() {
			return getRuleContexts(Drop_statementContext.class);
		}
		public Drop_statementContext drop_statement(int i) {
			return getRuleContext(Drop_statementContext.class,i);
		}
		public List<Insert_statementContext> insert_statement() {
			return getRuleContexts(Insert_statementContext.class);
		}
		public Insert_statementContext insert_statement(int i) {
			return getRuleContext(Insert_statementContext.class,i);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((_la) & ~0x3f) == 0 && ((1L << _la) & 35190816178176L) != 0) {
				{
				{
				setState(53);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CREATE:
					{
					setState(47);
					create_statement();
					}
					break;
				case READ:
					{
					setState(48);
					read_statement();
					}
					break;
				case UPDATE:
					{
					setState(49);
					update_statement();
					}
					break;
				case DELETE:
					{
					setState(50);
					delete_statement();
					}
					break;
				case DROP:
					{
					setState(51);
					drop_statement();
					}
					break;
				case INSERT:
					{
					setState(52);
					insert_statement();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(55);
				match(SEMICOLON);
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Create_statementContext extends ParserRuleContext {
		public Create_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_statement; }
	 
		public Create_statementContext() { }
		public void copyFrom(Create_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Create_stateContext extends Create_statementContext {
		public TerminalNode CREATE() { return getToken(squealParser.CREATE, 0); }
		public TerminalNode TABLE() { return getToken(squealParser.TABLE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode LEFT_PAR() { return getToken(squealParser.LEFT_PAR, 0); }
		public List<ColumndefContext> columndef() {
			return getRuleContexts(ColumndefContext.class);
		}
		public ColumndefContext columndef(int i) {
			return getRuleContext(ColumndefContext.class,i);
		}
		public TerminalNode RIGHT_PAR() { return getToken(squealParser.RIGHT_PAR, 0); }
		public List<TerminalNode> COMA() { return getTokens(squealParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(squealParser.COMA, i);
		}
		public Create_stateContext(Create_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitCreate_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Create_statementContext create_statement() throws RecognitionException {
		Create_statementContext _localctx = new Create_statementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_create_statement);
		int _la;
		try {
			_localctx = new Create_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(CREATE);
			setState(63);
			match(TABLE);
			setState(64);
			table_name();
			setState(65);
			match(LEFT_PAR);
			setState(66);
			columndef();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(67);
				match(COMA);
				setState(68);
				columndef();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(74);
			match(RIGHT_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Insert_statementContext extends ParserRuleContext {
		public Insert_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_insert_statement; }
	 
		public Insert_statementContext() { }
		public void copyFrom(Insert_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Insert_stateContext extends Insert_statementContext {
		public TerminalNode INSERT() { return getToken(squealParser.INSERT, 0); }
		public TerminalNode INTO() { return getToken(squealParser.INTO, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public List<TerminalNode> LEFT_PAR() { return getTokens(squealParser.LEFT_PAR); }
		public TerminalNode LEFT_PAR(int i) {
			return getToken(squealParser.LEFT_PAR, i);
		}
		public List<TerminalNode> RIGHT_PAR() { return getTokens(squealParser.RIGHT_PAR); }
		public TerminalNode RIGHT_PAR(int i) {
			return getToken(squealParser.RIGHT_PAR, i);
		}
		public TerminalNode VALUES() { return getToken(squealParser.VALUES, 0); }
		public List<Column_nameContext> column_name() {
			return getRuleContexts(Column_nameContext.class);
		}
		public Column_nameContext column_name(int i) {
			return getRuleContext(Column_nameContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(squealParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(squealParser.COMA, i);
		}
		public Insert_stateContext(Insert_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitInsert_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Insert_statementContext insert_statement() throws RecognitionException {
		Insert_statementContext _localctx = new Insert_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_insert_statement);
		int _la;
		try {
			_localctx = new Insert_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(76);
			match(INSERT);
			setState(77);
			match(INTO);
			setState(78);
			table_name();
			setState(79);
			match(LEFT_PAR);
			{
			setState(80);
			column_name();
			setState(85);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(81);
				match(COMA);
				setState(82);
				column_name();
				}
				}
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(88);
			match(RIGHT_PAR);
			setState(89);
			match(VALUES);
			setState(90);
			match(LEFT_PAR);
			{
			setState(91);
			term();
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(92);
				match(COMA);
				setState(93);
				term();
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(99);
			match(RIGHT_PAR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Read_statementContext extends ParserRuleContext {
		public Read_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_statement; }
	 
		public Read_statementContext() { }
		public void copyFrom(Read_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Read_stateContext extends Read_statementContext {
		public TerminalNode READ() { return getToken(squealParser.READ, 0); }
		public Read_expressionContext read_expression() {
			return getRuleContext(Read_expressionContext.class,0);
		}
		public TerminalNode FROM() { return getToken(squealParser.FROM, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(squealParser.WHERE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode DISTINCT() { return getToken(squealParser.DISTINCT, 0); }
		public TerminalNode ALL() { return getToken(squealParser.ALL, 0); }
		public Read_stateContext(Read_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitRead_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_statementContext read_statement() throws RecognitionException {
		Read_statementContext _localctx = new Read_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_read_statement);
		int _la;
		try {
			_localctx = new Read_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(101);
			match(READ);
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==DISTINCT || _la==ALL) {
				{
				setState(102);
				_la = _input.LA(1);
				if ( !(_la==DISTINCT || _la==ALL) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
			}

			setState(105);
			read_expression();
			setState(106);
			match(FROM);
			setState(107);
			table_name();
			setState(108);
			match(WHERE);
			setState(109);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Update_statementContext extends ParserRuleContext {
		public Update_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_update_statement; }
	 
		public Update_statementContext() { }
		public void copyFrom(Update_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Update_stateContext extends Update_statementContext {
		public TerminalNode UPDATE() { return getToken(squealParser.UPDATE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode SET() { return getToken(squealParser.SET, 0); }
		public TerminalNode WHERE() { return getToken(squealParser.WHERE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public List<Column_nameContext> column_name() {
			return getRuleContexts(Column_nameContext.class);
		}
		public Column_nameContext column_name(int i) {
			return getRuleContext(Column_nameContext.class,i);
		}
		public List<TerminalNode> INT() { return getTokens(squealParser.INT); }
		public TerminalNode INT(int i) {
			return getToken(squealParser.INT, i);
		}
		public List<TerminalNode> DOUBLE() { return getTokens(squealParser.DOUBLE); }
		public TerminalNode DOUBLE(int i) {
			return getToken(squealParser.DOUBLE, i);
		}
		public List<TerminalNode> STRING() { return getTokens(squealParser.STRING); }
		public TerminalNode STRING(int i) {
			return getToken(squealParser.STRING, i);
		}
		public List<TerminalNode> BOOL() { return getTokens(squealParser.BOOL); }
		public TerminalNode BOOL(int i) {
			return getToken(squealParser.BOOL, i);
		}
		public List<TerminalNode> COMA() { return getTokens(squealParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(squealParser.COMA, i);
		}
		public Update_stateContext(Update_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitUpdate_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Update_statementContext update_statement() throws RecognitionException {
		Update_statementContext _localctx = new Update_statementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_update_statement);
		int _la;
		try {
			_localctx = new Update_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(UPDATE);
			setState(112);
			table_name();
			setState(113);
			match(SET);
			{
			setState(114);
			column_name();
			setState(115);
			match(T__0);
			setState(116);
			_la = _input.LA(1);
			if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 844424946941952L) != 0) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(117);
				match(COMA);
				setState(118);
				column_name();
				setState(119);
				match(T__0);
				setState(120);
				_la = _input.LA(1);
				if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 844424946941952L) != 0) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			setState(127);
			match(WHERE);
			setState(128);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Delete_statementContext extends ParserRuleContext {
		public Delete_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_delete_statement; }
	 
		public Delete_statementContext() { }
		public void copyFrom(Delete_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Delete_stateContext extends Delete_statementContext {
		public TerminalNode DELETE() { return getToken(squealParser.DELETE, 0); }
		public TerminalNode FROM() { return getToken(squealParser.FROM, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public TerminalNode WHERE() { return getToken(squealParser.WHERE, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Delete_stateContext(Delete_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitDelete_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Delete_statementContext delete_statement() throws RecognitionException {
		Delete_statementContext _localctx = new Delete_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_delete_statement);
		int _la;
		try {
			_localctx = new Delete_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(130);
			match(DELETE);
			setState(131);
			match(FROM);
			setState(132);
			table_name();
			setState(135);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(133);
				match(WHERE);
				setState(134);
				expression();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Drop_statementContext extends ParserRuleContext {
		public Drop_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_drop_statement; }
	 
		public Drop_statementContext() { }
		public void copyFrom(Drop_statementContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Drop_stateContext extends Drop_statementContext {
		public TerminalNode DROP() { return getToken(squealParser.DROP, 0); }
		public TerminalNode TABLE() { return getToken(squealParser.TABLE, 0); }
		public Table_nameContext table_name() {
			return getRuleContext(Table_nameContext.class,0);
		}
		public Drop_stateContext(Drop_statementContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitDrop_state(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Drop_statementContext drop_statement() throws RecognitionException {
		Drop_statementContext _localctx = new Drop_statementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_drop_statement);
		try {
			_localctx = new Drop_stateContext(_localctx);
			enterOuterAlt(_localctx, 1);
			{
			setState(137);
			match(DROP);
			setState(138);
			match(TABLE);
			setState(139);
			table_name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Read_expressionContext extends ParserRuleContext {
		public List<Column_nameContext> column_name() {
			return getRuleContexts(Column_nameContext.class);
		}
		public Column_nameContext column_name(int i) {
			return getRuleContext(Column_nameContext.class,i);
		}
		public List<TerminalNode> AS() { return getTokens(squealParser.AS); }
		public TerminalNode AS(int i) {
			return getToken(squealParser.AS, i);
		}
		public List<AliasContext> alias() {
			return getRuleContexts(AliasContext.class);
		}
		public AliasContext alias(int i) {
			return getRuleContext(AliasContext.class,i);
		}
		public List<TerminalNode> COMA() { return getTokens(squealParser.COMA); }
		public TerminalNode COMA(int i) {
			return getToken(squealParser.COMA, i);
		}
		public Read_expressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitRead_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Read_expressionContext read_expression() throws RecognitionException {
		Read_expressionContext _localctx = new Read_expressionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_read_expression);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				{
				setState(141);
				match(T__1);
				}
				break;
			case NAME:
				{
				{
				setState(142);
				column_name();
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(143);
					match(AS);
					setState(144);
					alias();
					}
				}

				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMA) {
					{
					{
					setState(147);
					match(COMA);
					setState(148);
					column_name();
					setState(151);
					_errHandler.sync(this);
					_la = _input.LA(1);
					if (_la==AS) {
						{
						setState(149);
						match(AS);
						setState(150);
						alias();
						}
					}

					}
					}
					setState(157);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ColumndefContext extends ParserRuleContext {
		public Column_nameContext column_name() {
			return getRuleContext(Column_nameContext.class,0);
		}
		public Data_typeContext data_type() {
			return getRuleContext(Data_typeContext.class,0);
		}
		public TerminalNode NULL() { return getToken(squealParser.NULL, 0); }
		public TerminalNode PRIMARY_KEY() { return getToken(squealParser.PRIMARY_KEY, 0); }
		public TerminalNode NOT() { return getToken(squealParser.NOT, 0); }
		public ColumndefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_columndef; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof squealVisitor ) return ((squealVisitor<? extends T>)visitor).visitColumndef(this);
			else return visitor.visitChildren(this);
		}
	}
